Fix: Tab Bar - Reduce each tab gaps #56

--- a/userChrome.css
+++ b/userChrome.css
@@ -85,7 +85,7 @@
 
   /* neighbouring tabs should "pinch" together */
   .tabbrowser-tab {
-    padding-inline: 1px !important;
+    padding-inline: 0 !important;
   }
 
   .tabbrowser-tab:not([last-visible-tab]) {
